feat: add favicon and fix quote punctuation in annual letter

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-F">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TradingTransformer Technologies - Investment Fund</title>
+    <!-- Favicon -->
+    <link rel="icon" href="wswai.jpeg" type="image/jpeg">
+    <link rel="apple-touch-icon" href="wswai.jpeg">
+    <meta name="theme-color" content="#0A2F5B"> <!-- This sets the browser tab color on mobile -->
     <style>
         /* --- Global Styles & Variables --- */
         :root {
