fix: update Learn More link destination and replace dashes with em dashes

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         <div class="container">
             <h1>Transforming Investments with Technology</h1>
             <p>TradingTransformer Technologies leverages cutting-edge AI and quantitative models to unlock superior market returns. Discover the future of fund management.</p>
-            <a href="#learn-more" class="cta-button">Learn More</a>
+            <a href="annual-letter-2025.html" class="cta-button">Learn More</a>
         </div>
     </section>
 
@@ -491,7 +491,7 @@
             <div class="grid">
                 <div class="grid-item">
                     <h4>Quantitative Analysis</h4>
-                    <p>We employ sophisticated statistical models and machine learning algorithms—including large language models—not only to identify patterns and predict market movements with greater accuracy, but also to enhance both our investment decision making and the continuous iteration of our quantitative approaches.</p>
+                    <p>We employ sophisticated statistical models and machine learning algorithms&mdash;including large language models&mdash;not only to identify patterns and predict market movements with greater accuracy, but also to enhance both our investment decision making and the continuous iteration of our quantitative approaches.</p>
                 </div>
                 <div class="grid-item">
                     <h4>Risk Management</h4>
