update: change core values from Networking/Mastery/Excellence to Negotiation/Mindfulness/Efficiency

--- a/index.html
+++ b/index.html
@@ -466,13 +466,13 @@
                         <strong style="color:#1976d2;">T</strong>eamwork<br>
                         <strong style="color:#d32f2f;">R</strong>esilience<br>
                         <strong style="color:#fbc02d;">A</strong>ccountability<br>
-                        <strong style="color:#8e24aa;">N</strong>etworking<br>
+                        <strong style="color:#8e24aa;">N</strong>egotiation<br>
                         <strong style="color:#00acc1;">S</strong>trategy<br>
                         <strong style="color:#388e3c;">F</strong>ocus<br>
                         <strong style="color:#1976d2;">O</strong>penness<br>
                         <strong style="color:#d32f2f;">R</strong>esults<br>
-                        <strong style="color:#fbc02d;">M</strong>astery<br>
-                        <strong style="color:#8e24aa;">E</strong>xcellence<br>
+                        <strong style="color:#fbc02d;">M</strong>indfulness<br>
+                        <strong style="color:#8e24aa;">E</strong>fficiency<br>
                         <strong style="color:#00acc1;">R</strong>eliability
                     </p>
                 </div>
