update: refine strategy description and add WSW AI tool integration in CTA section

--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
     <section id="strategy">
         <div class="container">
             <h2 class="section-title">Our Investment Strategy</h2>
-            <p>Our proprietary "Transformer" investment engine is at the heart of our strategy. It continuously analyzes vast datasets, including market data, economic indicators, alternative data, and sentiment analysis, to generate predictive insights and optimize portfolio allocations.</p>
+            <p>Our proprietary "Transformer" investment engine is at the heart of our strategy. It continuously analyzes vast datasets, including market data and alternative text data, to generate predictive insights and optimize portfolio allocations.</p>
             <div class="grid">
                 <div class="grid-item">
                     <h4>Quantitative Analysis</h4>
@@ -498,8 +498,8 @@
                     <p>We <span style="color: var(--accent-color); font-weight: bold;">never borrow money and never use leverage</span>. Our investment process is strictly long-only and fully funded, ensuring that portfolio risk is controlled and always aligned with our clients' tolerance. Advanced risk modeling is integral to our process, providing additional resiliency in all market conditions.</p>
                 </div>
                 <div class="grid-item">
-                    <h4>AI-Powered Decisions</h4>
-                    <p>Our AI systems adapt to changing market conditions, learning from new data to refine strategies and enhance performance over time.</p>
+                    <h4>AI-Powered & Expert-Reviewed Decisions</h4>
+                    <p>Our AI-driven systems adapt to evolving market conditions, learning from new data to continuously improve strategies and performance. Every important decision is personally reviewed by our CEO, ensuring responsible oversight and a synergy between advanced technology and human expertise.</p>
                 </div>
             </div>
             <div style="text-align: center; margin-top: 30px;">
@@ -514,9 +514,9 @@
         <div class="container">
             <h2 style="color: var(--primary-color);">Ready to Transform Your Portfolio?</h2>
             <p style="color: var(--text-color); max-width:600px; margin: 0 auto 2em auto; font-size:1.15em;">
-                Discover how TradingTransformer Technologies LLC can help you achieve your financial goals. Get in touch with our specialists today.
+                Discover how TradingTransformer Technologies LLC can help you achieve your financial goals. Try out the WSW AI - Company Finder tool at <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer">wsw.ai</a> website.
             </p>
-            <a href="#contact"
+            <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer"
                class="cta-button"
                style="
                    background-color: var(--primary-color);
@@ -530,7 +530,7 @@
                "
                onmouseover="this.style.backgroundColor='var(--accent-color)'; this.style.color='var(--primary-color)'; this.style.borderColor='var(--accent-color)';"
                onmouseout="this.style.backgroundColor='var(--primary-color)'; this.style.color='var(--light-text-color)'; this.style.borderColor='var(--primary-color)';"
-            >Request Information</a>
+             >WSW AI - Company Finder</a>
         </div>
     </section>
 
