--- a/index.html
+++ b/index.html
@@ -466,14 +466,14 @@
                         <strong style="color:#1976d2;">T</strong>eamwork<br>
                         <strong style="color:#d32f2f;">R</strong>esilience<br>
                         <strong style="color:#fbc02d;">A</strong>ccountability<br>
-                        <strong style="color:#8e24aa;">N</strong>egotiation<br>
+                        <strong style="color:#8e24aa;">N</strong>oble<br>
                         <strong style="color:#00acc1;">S</strong>trategy<br>
                         <strong style="color:#388e3c;">F</strong>ocus<br>
                         <strong style="color:#1976d2;">O</strong>penness<br>
                         <strong style="color:#d32f2f;">R</strong>esults<br>
                         <strong style="color:#fbc02d;">M</strong>indfulness<br>
-                        <strong style="color:#8e24aa;">E</strong>fficiency<br>
-                        <strong style="color:#00acc1;">R</strong>eliability
+                        <strong style="color:#8e24aa;">E</strong>ffortless<br>
+                        <strong style="color:#00acc1;">R</strong>esolute<br>
                     </p>
                 </div>
                 <div class="grid-item">
