docs: add company incorporation date and research start date to About section

--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@
         <div class="container">
             <h2 class="section-title">About TradingTransformer Technologies</h2>
             <p>Founded on the principle of innovation, TradingTransformer Technologies is a pioneering investment firm dedicated to harnessing the power of artificial intelligence and advanced data analytics. Our "Transformer" models are designed to identify and capitalize on market inefficiencies previously undetectable by traditional methods.</p>
+            <p><em>Research began on October 25, 2019, with the company legally incorporated in Delaware on June 6, 2023.</em></p>
             <div class="grid">
                 <div class="grid-item">
                     <h3>Our Mission</h3>
@@ -513,8 +514,21 @@
     <section id="learn-more" class="cta-section" style="background-color: var(--bg-light);">
         <div class="container">
             <h2 style="color: var(--primary-color);">Ready to Transform Your Portfolio?</h2>
-            <p style="color: var(--text-color); max-width:600px; margin: 0 auto 2em auto; font-size:1.15em;">
-                Discover how TradingTransformer Technologies LLC can help you achieve your financial goals. Try out the WSW AI - Company Finder tool at <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer">wsw.ai</a> website.
+            <p style="color: #1abc9c; background: linear-gradient(90deg, #0A2F5B 0%, #5dade2 100%); max-width:600px; margin: 0 auto 2em auto; font-size:1.15em; padding: 1.2em 1.5em; border-radius: 18px; box-shadow: 0 4px 16px rgba(10,47,91,0.07); line-height: 1.7;">
+                <span style="color: #00FF00; font-weight: 600;">Our proprietary technology</span>
+                <span style="color:#FFF;"> features a </span>
+                <span style="color:#00FF00; font-weight:600;">large language model-based method</span>
+                <span style="color:#FFF;"> to retrieve companies before ranking, enabling more accurate and insightful investment decisions.</span>
+                <br><br>
+                <span style="color:#FFF;">Discover how </span>
+                <span style="color:#00FF00; font-weight: 600;">TradingTransformer Technologies LLC</span>
+                <span style="color:#FFF;"> can help you achieve your financial goals. Try out the </span>
+                <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer"
+                   style="background: linear-gradient(90deg,#00ff00,#00ff00); color: #0A2F5B; font-weight: bold; text-decoration: none; padding: 0.22em 0.72em; border-radius: 6px; box-shadow: 0 2px 8px rgba(0, 255, 0, 0.08); transition: background 0.2s;"
+                   onmouseover="this.style.background='linear-gradient(90deg,#00ff00,#00ff00)';"
+                   onmouseout="this.style.background='linear-gradient(90deg,#00ff00,#00ff00)';"
+                >WSW AI - Company Finder</a>
+                <span style="color:#FFF;"> tool at <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color:#00FF00; text-decoration: none;">wsw.ai</a> <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color:#00FF00; text-decoration: none;">website</a>.</span>
             </p>
             <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer"
                class="cta-button"
