feat: add Google Analytics tracking code to website header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="icon" href="wswai.jpeg" type="image/jpeg">
     <link rel="apple-touch-icon" href="wswai.jpeg">
     <meta name="theme-color" content="#0A2F5B"> <!-- This sets the browser tab color on mobile -->
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17214811508"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-17214811508');
+    </script>
+
     <style>
         /* --- Global Styles & Variables --- */
         :root {
