feat: enhance UI with animated CTA button and add Claude Shannon quote section

--- a/annual-letter-2025.html
+++ b/annual-letter-2025.html
@@ -38,7 +38,7 @@
         <p>Hey there,</p>
 
         <p>
-            This is Liwei Wu (<a href="https://www.linkedin.com/in/liweiwu/" target="_blank" rel="noopener noreferrer">LinkedIn</a>). It has been a while since our last communication back in November 2023. In my last email, I admitted we were nowhere close to a B2B or B2C product. That, unfortunately, is still the case—and I truly appreciate that you filled out the interest form back then so I have your emails. However, I’m glad to share that I am starting to see evidence of real progress for our company in the field of investing.
+            This is Liwei Wu (<a href="https://www.linkedin.com/in/liweiwu/" target="_blank" rel="noopener noreferrer">LinkedIn</a> | <a href="https://scholar.google.com/citations?user=OTLaJT4AAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Google Scholar</a>). It has been a while since our last communication back in November 2023. In my last email, I admitted we were nowhere close to a B2B or B2C product. That, unfortunately, is still the case—and I truly appreciate that you filled out the interest form back then so I have your emails. However, I’m glad to share that I am starting to see evidence of real progress for our company in the field of investing.
         </p>
 
         <p>Summarizing the past fiscal year, there are 2 milestones that are remarkable by any measures which clearly exceeded my own expectations:</p>
