docs: update company description to emphasize LLM agents and clarify research timeline

--- a/index.html
+++ b/index.html
@@ -458,8 +458,8 @@
     <section id="about">
         <div class="container">
             <h2 class="section-title">About TradingTransformer Technologies</h2>
-            <p>Founded on the principle of innovation, TradingTransformer Technologies is a pioneering investment firm dedicated to harnessing the power of artificial intelligence and advanced data analytics. Our "Transformer" models are designed to identify and capitalize on market inefficiencies previously undetectable by traditional methods.</p>
-            <p><em>Research began on October 25, 2019, with the company legally incorporated in Delaware on June 6, 2023.</em></p>
+            <p>Founded on the principle of innovation, TradingTransformer Technologies is a pioneering investment firm dedicated to harnessing the power of artificial intelligence and large language model AI agents. Our "Transformer" models are designed to identify and capitalize on market inefficiencies previously undetectable by traditional methods.</p>
+            <p><em>It took 6 years' research from inception (October 25, 2019) to reach excellence, with legal incorporation in Delaware on June 6, 2023.</em></p>
             <div class="grid">
                 <div class="grid-item">
                     <h3>Our Mission</h3>
@@ -646,7 +646,7 @@
                         text-align: left;
                         position: relative;
                     ">
-                        Shannon set four goals for artificial intelligence to achieve by 2001: a chess-playing program that was crowned world champion, a poetry program that had a piece accepted by the New Yorker, a mathematical program that proved the elusive Riemann hypothesis, and, <strong style="color: var(--primary-color);">'most important,'</strong> <strong style="color: var(--accent-color);">a stock-picking program that outperformed the prime rate by 50 percent</strong>. 'These goals,' he said only half-jokingly, 'could mark the beginning of a phase-out of the stupid, entropy-increasing, and militant human race in favor of a more logical, energy conserving, and friendly species — the computer.'
+                        Claude Shannon set four goals for artificial intelligence to achieve by 2001: a chess-playing program that was crowned world champion, a poetry program that had a piece accepted by the New Yorker, a mathematical program that proved the elusive Riemann hypothesis, and, <strong style="color: var(--primary-color);">'most important,'</strong> <strong style="color: var(--accent-color);">a stock-picking program that outperformed the prime rate by 50 percent</strong>. 'These goals,' he said only half-jokingly, 'could mark the beginning of a phase-out of the stupid, entropy-increasing, and militant human race in favor of a more logical, energy conserving, and friendly species — the computer.'
                     </blockquote>
                     
                     <!-- Closing quote mark -->
@@ -673,7 +673,7 @@
                         From <em style="color: var(--accent-color);">A Mind at Play</em>, Jimmy Soni and Rob Goodman's 2017 biography of AI pioneer Claude Shannon
                     </p>
                     <p style="margin: 0; font-size: 0.95em; opacity: 0.9; font-style: italic;">
-                        Shannon wrote that in 1984. He died in 2001.
+                        Claude Shannon wrote that in 1984. He died in 2001.
                     </p>
                 </div>
             </div>
