--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-F">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TradingTransformer Technologies - Investment Fund</title>
+    <title>TradingTransformer - WSW AI </title>
     <!-- Favicon -->
     <link rel="icon" href="wswai.jpeg" type="image/jpeg">
     <link rel="apple-touch-icon" href="wswai.jpeg">
