update: adjust YTD performance to 74.99% and add team@wsw.ai contact email

--- a/index.html
+++ b/index.html
@@ -444,10 +444,10 @@
         <div class="container">
             <h2>Our Fund Performance</h2>
             <!-- YTD PERFORMANCE NUMBER - UPDATE THIS! -->
-            <span class="ytd-number">+76.37%</span>
+            <span class="ytd-number">+74.99%</span>
             <!-- If performance is negative, add class="negative" to ytd-number and update text -->
             <!-- <span class="ytd-number negative">-2.34%</span> -->
-            <span class="ytd-label">Year-to-Date (YTD) Return <span style="font-size:0.9em; opacity:0.7;">(as of June 4, 2025)</span></span>
+            <span class="ytd-label">Year-to-Date (YTD) Return <span style="font-size:0.9em; opacity:0.7;">(as of June 20, 2025)</span></span>
             <p style="font-size: 0.9em; opacity: 0.8; margin-top: 15px;">
                 Past performance is not indicative of future results.
             </p>
@@ -685,9 +685,7 @@
             <h2 class="section-title">Contact Us</h2>
             <p style="text-align: center;">We welcome inquiries from accredited investors and institutions. Reach out to us to learn more about our fund and investment opportunities.</p>
             <div style="text-align: center; font-size: 1.1em;">
-                <p><strong>Email:</strong> <a href="mailto:contact@tradingtransformer.com">contact@tradingtransformer.com</a></p>
-                <!-- <p><strong>Phone:</strong> +1 (555) 123-4567 (Example)</p>
-                <p><strong>Address:</strong> 123 Innovation Drive, Tech City, CA 90210 (Example)</p> -->
+                <p><strong>Email:</strong> <a href="mailto:contact@tradingtransformer.com">contact@tradingtransformer.com</a> &nbsp;|&nbsp; <a href="mailto:team@wsw.ai">team@wsw.ai</a></p>
             </div>
             <!-- You can add a contact form here if desired -->
         </div>
