--- a/index.html
+++ b/index.html
@@ -533,48 +533,36 @@
                 <br><br>
                 <span style="color:#FFF;">Discover how </span>
                 <span style="color:#00FF00; font-weight: 600;">TradingTransformer Technologies LLC</span>
-                <span style="color:#FFF;"> can help you achieve your financial goals. Try out the </span>
-                <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer"
-                   style="background: linear-gradient(90deg,#00ff00,#00ff00); color: #0A2F5B; font-weight: bold; text-decoration: none; padding: 0.22em 0.72em; border-radius: 6px; box-shadow: 0 2px 8px rgba(0, 255, 0, 0.08); transition: background 0.2s;"
-                   onmouseover="this.style.background='linear-gradient(90deg,#00ff00,#00ff00)';"
-                   onmouseout="this.style.background='linear-gradient(90deg,#00ff00,#00ff00)';"
-                >WSW AI - Company Finder</a>
-                <span style="color:#FFF;"> tool at <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color:#00FF00; text-decoration: none;">wsw.ai</a> <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color:#00FF00; text-decoration: none;">website</a>.</span>
+                <span style="color:#FFF;"> can help you achieve your financial goals. </span>
+                <span style="background-color: var(--accent-color); color: var(--light-text-color); font-weight: bold; padding: 0.22em 0.72em; border-radius: 6px; box-shadow: 0 2px 8px rgba(26, 188, 156, 0.3);">Try out the <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer"
+                   style="color: var(--light-text-color); font-weight: bold; text-decoration: none; transition: color 0.3s ease;"
+                   onmouseover="this.style.color='#e8f8f5';"
+                   onmouseout="this.style.color='var(--light-text-color)';"
+                >WSW AI - Company Finder</a> tool at <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">wsw.ai</a> <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">website</a>.</span>
             </p>
             <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer"
                class="cta-button"
                style="
-                   background-color: var(--primary-color);
+                   background-color: var(--accent-color);
                    color: var(--light-text-color);
-                   border: 3px solid var(--primary-color);
-                   font-size: 1.2em;
-                   font-weight: 600;
-                   letter-spacing: 0.04em;
-                   border-radius: 50px;
-                   box-shadow: 0 8px 25px rgba(10,47,91,0.25);
-                   padding: 20px 45px;
-                   transition: all 0.3s ease;
-                   transform: translateY(0);
-                   cursor: pointer;
+                   padding: 15px 30px;
+                   border-radius: 5px;
+                   font-size: 1.1em;
+                   font-weight: bold;
+                   text-transform: uppercase;
+                   transition: background-color 0.3s ease, transform 0.2s ease;
                    display: inline-block;
                    text-decoration: none;
+                   cursor: pointer;
                "
                onmouseover="
-                   this.style.backgroundColor='var(--accent-color)'; 
-                   this.style.color='var(--primary-color)'; 
-                   this.style.borderColor='var(--accent-color)';
-                   this.style.transform='translateY(-3px)';
-                   this.style.boxShadow='0 12px 35px rgba(29,233,182,0.4)';
+                   this.style.backgroundColor='#16a085'; 
+                   this.style.transform='translateY(-2px)';
                "
                onmouseout="
-                   this.style.backgroundColor='var(--primary-color)'; 
-                   this.style.color='var(--light-text-color)'; 
-                   this.style.borderColor='var(--primary-color)';
+                   this.style.backgroundColor='var(--accent-color)'; 
                    this.style.transform='translateY(0)';
-                   this.style.boxShadow='0 8px 25px rgba(10,47,91,0.25)';
                "
-               onmousedown="this.style.transform='translateY(-1px)';"
-               onmouseup="this.style.transform='translateY(-3px)';"
              >WSW AI - Company Finder</a>
         </div>
     </section>
