feat: add privacy policy page with styling and content

--- a/index.html
+++ b/index.html
@@ -534,11 +534,11 @@
                 <span style="color:#FFF;">Discover how </span>
                 <span style="color:#00FF00; font-weight: 600;">TradingTransformer Technologies LLC</span>
                 <span style="color:#FFF;"> can help you achieve your financial goals. </span>
-                <span style="background-color: var(--accent-color); color: var(--light-text-color); font-weight: bold; padding: 0.22em 0.72em; border-radius: 6px; box-shadow: 0 2px 8px rgba(26, 188, 156, 0.3);">Try out the <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer"
+                <span style="background-color: var(--accent-color); color: var(--light-text-color); font-weight: bold; padding: 0.22em 0.72em; border-radius: 6px; box-shadow: 0 2px 8px rgba(26, 188, 156, 0.3);">Chat with the <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer"
                    style="color: var(--light-text-color); font-weight: bold; text-decoration: none; transition: color 0.3s ease;"
                    onmouseover="this.style.color='#e8f8f5';"
                    onmouseout="this.style.color='var(--light-text-color)';"
-                >WSW AI - Company Finder</a> tool at <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">wsw.ai</a> <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">website</a>.</span>
+                >WSW AI</a> chatbot after paying at <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">https://wsw.ai</a> <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">website</a>.</span>
             </p>
             <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer"
                class="cta-button"
@@ -563,7 +563,7 @@
                    this.style.backgroundColor='var(--accent-color)'; 
                    this.style.transform='translateY(0)';
                "
-             >WSW AI - Company Finder</a>
+             >WSW AI chatbot</a>
         </div>
     </section>
 
@@ -689,7 +689,7 @@
     <footer>
         <div class="container">
             <p>&copy; <span id="currentYear"></span> TradingTransformer Technologies LLC. All Rights Reserved.</p>
-            <!-- <p><a href="#privacy">Privacy Policy</a> | <a href="#terms">Terms of Service</a></p> -->
+            <p><a href="wsw_ai/privacy-policy.html">Privacy Policy</a></p>
         </div>
     </footer>
 
